--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -5,7 +5,7 @@
     background-color: #131921;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 10000;
 }
 .header .logo{
     display: flex;
@@ -19,7 +19,7 @@
 .logo h2{
     text-decoration: none;
     border: 0;
-    color: white;
+    color: white !important;
     font-family: "Poppins";
     font-size: 24px;
     font-weight: normal;
@@ -42,6 +42,7 @@
     padding: 5px;
     height: 22px !important;
     background: #ff9f00;
+    color: white;
 }
 
 .navigation{
