--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -6,11 +6,14 @@
 }
 .home .container{
     width: 100%;
+    margin: 0;
+    padding: 0;
+    background: transparent;
 }
 .home img.img{
     width: 100%;
     height: 600px;
-    z-index: -1;
+    z-index: 1;
     margin-bottom: -50px;
     mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 }
